# KalistoUnpacker

./: .gitignore  CMakeLists.txt  README.md  extract.sh
.github/workflows/: amd64_macos_cmake.yml  docker.yml  linux.yml  macos.yml  windows.yml
ci/: Makefile  README.md
ci/docker/almalinux/: Dockerfile
ci/docker/alpine/: Dockerfile
ci/docker/archlinux/: Dockerfile
ci/docker/centos/: Dockerfile
ci/docker/debian/: Dockerfile
ci/docker/fedora/: Dockerfile
ci/docker/opensuse/: Dockerfile
ci/docker/rockylinux/: Dockerfile
ci/docker/ubuntu/: Dockerfile
ci/sample/: CMakeLists.txt  main.cpp
cmake/: KalistoUnpackerConfig.cmake.in
kunpacker/: CMakeLists.txt
kunpacker/src/: main.cpp
libkunpacker/: CMakeLists.txt
libkunpacker/include/: kunpacker.hpp
libkunpacker/src/: kunpacker.cpp
